<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/user"
        android:title="@string/usersList"/>
    <item android:id="@+id/profile"
        android:title="@string/profile"/>
    <item android:id="@+id/backgroundAsync"
        android:title="@string/asyncTask"/>
    <item android:id="@+id/volley"
        android:title="@string/volley"/>
    <item android:id="@+id/retrofit"
        android:title="@string/retrofit"/>
    <item android:id="@+id/okhttp"
        android:title="@string/okHttp"/>
    <item android:id="@+id/jsonfile"
        android:title="@string/jsonfile"></item>
    <item android:id="@+id/extra_thing"
        android:title="@string/extra_thing"></item>
    <item android:id="@+id/firebase_cloud_messaging"
        android:title="@string/firebase"></item>
    <item android:id="@+id/alarm_manager"
        android:title="@string/alarm"></item>
    <item android:id="@+id/logout"
        android:title="@string/logout_menu"/>
</menu>