<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/context_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="@dimen/universal_padding"
    tools:context=".activities.RegisterationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/framelayout_margintop"
                android:background="@drawable/shapedrawer">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="@dimen/login_content_padding">

                    <TextView
                        android:id="@+id/register_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/universal_margin"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/signup_message"
                        android:textColor="@color/blacktxt_color"
                        android:textSize="@dimen/signuphead"></TextView>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/register_txt"
                        android:layout_marginBottom="@dimen/universal_margin"
                        android:hint="@string/namehint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerF_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:singleLine="true">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edittxt_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edit_name"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerF_useremail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:singleLine="true">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edittxt_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edittxt_email"
                        android:layout_marginBottom="@dimen/universal_margin"
                        android:hint="@string/password_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerF_userpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:singleLine="true">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edittxt_dateofbirth"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edittxt_password"
                        android:layout_marginBottom="@dimen/universal_margin"
                        android:hint="@string/dateofbirth_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerF_userdob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:singleLine="true">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edittxt_dateofbirth"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/registration_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/universal_margin"
                            android:insetLeft="@dimen/framelout_elevation"
                            android:text="@string/signup">

                        </com.google.android.material.button.MaterialButton>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/taketo_loginscreen"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/universal_margin"
                            android:insetLeft="@dimen/framelout_elevation"
                            android:text="@string/signin">

                        </com.google.android.material.button.MaterialButton>

                    </LinearLayout>

                </RelativeLayout>

            </FrameLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>